--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Ring Alarm to MQTT Bridge",
   "main": "ring-alarm-mqtt.js",
   "dependencies": {
-    "ring-client-api": "^6.0.3",
     "debug": "^4.1.1",
-    "mqtt": "^3.0.0"
+    "mqtt": "^3.0.0",
+    "ring-client-api": "^6.0.3"
   },
   "devDependencies": {},
   "scripts": {
